# eso-addon-manager

./: CLAUDE.md  README.md  eso-addon-manager-implementation.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_version_tracking.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: addons.rs  github.rs  index.rs  mod.rs  settings.rs
src-tauri/src/models/: addon.rs  index.rs  mod.rs  settings.rs
src-tauri/src/services/: database.rs  downloader.rs  installer.rs  mod.rs  resolver.rs  scanner.rs
src-tauri/src/utils/: manifest.rs  mod.rs  paths.rs  version.rs  zip.rs
src/components/addons/: AddonCard.tsx  DependencyDialog.tsx
src/components/common/: Button.tsx  UpdateBanner.tsx
src/components/github/: AddRepoModal.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/search/: SearchBar.tsx
src/services/: tauri.ts
src/stores/: addonStore.ts  githubStore.ts  indexStore.ts  settingsStore.ts
src/types/: addon.ts  github.ts  index.ts  settings.ts
