[package]
name = "eso-addon-manager"
version = "0.3.0"
description = "ESO Addon Manager - Discover, install, and manage Elder Scrolls Online addons"
authors = ["you"]
license = "MIT"
edition = "2021"

[lib]
name = "eso_addon_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "2"

# Platform directories
directories = "6"

# Archive extraction
zip = "2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Async stream utilities
futures-util = "0.3"

# Temporary files
tempfile = "3"

